[metadata]
name = PyMvola
version = 1.0.1
author = rivo2302
author_email = rivo2302@gmail.com
description = PyMvola is a light open source module for Mvola API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rivo2302/PyMvola
project_urls =
    Bug Tracker = https://github.com/rivo2302/PyMvola
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7