[metadata]
name = mvola
version = 1.0.5
author = rivo2302
author_email = rivo2302@gmail.com
description = A light open source module for Mvola API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rivo2302/Mvola
project_urls =
    Bug Tracker = https://github.com/rivo2302/Mvola/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GPL3 License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7